# IoTC2Server

./: C2ServerDatabase.sql  CMakeLists.txt  README.md  c2server.db  config.env  main.cpp
fuzz/NetworkLevelFuzzer/NetworkLevelFuzzer/: client_fuzz.py  requirements.txt
include/: C2Server.h  ConfigManager.h  IDatabaseConnection.h  IRepository.h  ISocket.h  Logger.h  SQLiteConnection.h  TcpSocket.h
models/: Client.cpp  Client.h
repositories/: ClientRepository.cpp  ClientRepository.h
src/: C2Server.cpp  ConfigManager.cpp  Logger.cpp  SQLiteConnection.cpp  TcpSocket.cpp
tests/: C2ServerTests.cpp  CMakeLists.txt  ClientRepositoryTests.cpp
